# splent_feature_auth

./: .gitignore  MANIFEST.in  pyproject.toml
src/splent_feature_auth/: decorators.py  forms.py  models.py  repositories.py  routes.py  seeders.py  services.py
src/splent_feature_auth/tests/: conftest.py
src/splent_feature_auth/tests/functional/: test_login_flow.py
src/splent_feature_auth/tests/integration/: test_login_integration.py
src/splent_feature_auth/tests/unit/: test_auth_service.py
src/splent_io/splent_feature_auth/: __init__.py  commands.py  decorators.py  forms.py  hooks.py  models.py  repositories.py  routes.py  seeders.py  services.py  signals.py
src/splent_io/splent_feature_auth/assets/js/: scripts.js  webpack.config.js
src/splent_io/splent_feature_auth/migrations/: env.py
src/splent_io/splent_feature_auth/migrations/versions/: 5ad9fd0688b1_splent_feature_auth.py  742c1ee13917_splent_feature_auth.py  8c02a7f8902b_splent_feature_auth.py  990210b54b52_splent_feature_auth.py  a1fb31611281_splent_feature_auth.py  fd0b989746d8_splent_feature_auth.py
src/splent_io/splent_feature_auth/templates/auth/: login_form.html  signup_form.html
src/splent_io/splent_feature_auth/templates/hooks/: anonymous_sidebar_items.html  authenticated_sidebar_items.html  navbar_anonymous.html  navbar_authenticated.html
src/splent_io/splent_feature_auth/tests/: conftest.py
src/splent_io/splent_feature_auth/tests/e2e/: test_browser.py
src/splent_io/splent_feature_auth/tests/load/: locustfile.py
src/splent_io/splent_feature_auth/translations/: messages.pot
(+6 files in other folders)
