[build-system]
requires = ["setuptools>=80.3.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splent_feature_auth"
version = "1.0.4"
requires-python = ">=3.12"
authors = [{ name = "DiversoLab", email = "diversolab@us.es" }]
dependencies = [
    "email_validator"
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
