[build-system]
requires = ["setuptools>=80.3.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splent_feature_auth"
version = "1.1.1"
requires-python = ">=3.13"
authors = [{ name = "DiversoLab", email = "diversolab@us.es" }]
dependencies = [
    "email_validator"
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.splent.contract]
description = "Authentication feature: registration, login, logout, and session management"

[tool.splent.contract.provides]
routes = ["/signup", "/login", "/logout"]
blueprints = ["auth_bp"]
models = ["User"]
commands = []

[tool.splent.contract.requires]
features = []
env_vars = []
